ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-02-15 Daniel Andreca
	- GUI:
		* Fixed #1665: Form and td/table tags are mixed-up the wrong way in admin/reseller_edit.tpl
		* Fixed #1664: ServerStatus running SSHD shows DOWN
		* Fixed #1669: File Conf /etc/httpd/vhosts/01_awstats.conf for apache_awstats in fedora core 10

2009-02-15 Benedikt Heintel
	- GUI:
		* Fixed #1662: change "mail" to "SMTP" in statistics
	- LANGUAGES:
		* Updated all language files

2009-02-14 Daniel Andreca
	- GUI:
		* Alias subdomains are not rebuilded on domain property change
		* Hosting plan not readed when a new user is added
	- SETUP:
		* Updated update script

2009-02-14 Thomas Häber
	- THEMES:
		* fixes for more valid HTML (ID="..."->id="..."; css-/js-meta-tags for HTML attributes onload="javscript:.." and style="...", CSS-Background-fix)

2009-02-13 Thomas Häber
	- GUI:
		* code cleanup / coding style (PHP + included SQL)
		* optimized a lot of control structures (e.g. replaced some slow and hugh loops with internal php functions, or replaced hugh if-else structures with short ?: structure)
		* some fixes (e.g. for more valid HTML output)
		* fix typos in PHP comments
	- ENGINE:
		* typos in STDERR-output of perl db script
	- THEMES:
		* fixes for more valid HTML (workaround for confusing screenwidth thing)

2009-02-12 Daniel Andreca
	- ENGINE:
		* Updated update script

2009-02-12 Thomas Häber
	- THEMES:
		* typo (missing point) in domain_default_page/index.html
		* more information with explicit naming of error code in errordocs title, removed ugly capitalized ERROR to Error
		* extern javascript file in errordocs (errordocs.js) does not need CDATA area
		* replaced separated robots-meta-tag with one meta-tag (it's default to use 'nofollow, noindex' in one meta-tag), furthermore this means less code