@@ -94,7 +94,7 @@
     <td><table width="100%" border="0" cellspacing="0" cellpadding="0">
       <tr>
         <td width="40">&nbsp;</td>
-        <td valign="top"><form name="question_frm" method="post" action="ticket_view.php?ticket_id={ID}&screenwidth={SCREENWIDTH}">
+        <td valign="top"><form name="question_frm" method="post" action="ticket_view.php?ticket_id={ID}&amp;screenwidth={SCREENWIDTH}">
           <table width="100%" cellspacing="5">
             <tr>
               <td class="content"><textarea name="user_message" style="width:80%" class="textinput2" rows="12"></textarea>
